<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome, FreeRider!</string>
    <string name="app_name">FreeRider</string>
    <string name="welcome">Facebook</string>
    <string name="enter">Log in</string>
    <string name="journey_main_title">My Trips</string>
    <string name="server_url">vm-6116.idi.ntnu.no</string>
    <string name="server_port">8080</string>
    
    <string name="date_prompt">Choose an option</string>
    <string-array name="date_array">
        <item>Upcoming</item>
        <item>Specific date</item>
    </string-array>
    <string-array name="preferences_array">
        <item>Music</item>
        <item>Animals</item>
        <item>Breaks</item>
        <item>Talking</item>
        <item>Smoking</item>
    </string-array>
    <string name="search">Search</string>
    <string name="destination">Destination</string>
    <string name="current_location">Current location</string>
    <string name="origin">Origin</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="loadingText">Loading....</string>
    <string name="pickupAndDropoffName">Freerider - Pickup and dropoff</string>
    <string name="upcoming">Next 14 days</string>
    <string name="specific_date">Specify date</string>
    <string name="find_ride">Find ride</string>

</resources>