<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
	
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true">
	     <Button
	        android:id="@+id/bSub"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:text="@string/minus"
	        android:textSize="40sp"
	        android:textStyle="bold"
	         />
	    <EditText
	        android:id="@+id/numberofseats"
	        android:inputType="numberDecimal"
	        android:textSize="40sp"
	        android:textAlignment="center"
	        android:layout_width="70dp"
	        android:hint="@string/one"
	        android:layout_height="70dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	         />
	    <Button
	        android:id="@+id/bAdd"
	        android:layout_width="70dp"
	        android:layout_height="70dp"
	        android:text="@string/plus"
	        android:textSize="40sp"
	        android:textStyle="bold"
	         />
	</LinearLayout>
	
</RelativeLayout>