<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
			<View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="1" />
                <Spinner
                    android:id="@+id/previous" 
                    android:layout_height="55dp"
                    android:layout_width="0dip"
                    android:layout_weight="8" />
                <View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="1" />
        </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        		<View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="1" />
        		<!-- Layout for allowing overlap -->

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8" >

                	<AutoCompleteTextView
                    	android:id="@+id/searchText"
                    	android:layout_width="match_parent"
                    	android:layout_height="55dp"
                    	android:imeOptions="actionNext"
                    	android:singleLine="true"
                    	android:paddingRight="40dip"
                    	android:hint="@string/origin">
                    	<requestFocus />
                	</AutoCompleteTextView>
				<!-- Current location button -->
                	<ImageView
                    	android:id="@+id/gpsButton"
                    	android:contentDescription="@string/current_location"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:layout_gravity="right|center_vertical"
                    	android:layout_marginRight="5dp"
                    	android:src="@drawable/ic_menu_mylocation" 
                    	android:onClick="onGpsClicked"/>
                </FrameLayout> 
                <View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="1" /> 
    </LinearLayout>
				
         
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
			<View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="1" />
                <AutoCompleteTextView
                    android:id="@+id/search2" 
                    android:hint="@string/destination"   
                    android:layout_height="55dp"
                    android:layout_width="0dip"
                    android:layout_weight="8" 
                    android:imeOptions="actionDone"
                    android:singleLine="true"/>
                <View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">
            <View
	   		    android:layout_width="0dp"
	   		    android:layout_height="0dp"
	   		    android:layout_weight="1" />
            
            <Button
                	android:id="@+id/btnUpcoming"
        		    android:layout_width="0dip"
        		    android:layout_height="wrap_content"
        		    android:text="@string/upcoming"
        		    android:onClick="btnUpcomingClicked"
        		    android:textSize="15sp"
        		    android:layout_weight="4"
        		    android:layout_marginRight="2dp"
        		    />
			<Button
			    	android:id="@+id/btnPickDate"
        		    android:layout_width="0dip"
        		    android:layout_height="fill_parent"
        		    android:text="@string/specific_date"
        		    android:onClick="btnPickDateClicked"
        		    android:textSize="15sp"
        		    android:layout_weight="4"
        		    android:layout_marginLeft="2dp"
        		    />
			<View
	   		    android:layout_width="0dp"
	   		    android:layout_height="0dp"
	   		    android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" 
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
			<View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="1" />
            <Button
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"
                android:background="@drawable/list_selector"
                android:onClick="search"
                android:text="@string/search"/>
            <View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="1" />
        </LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent" 
		    android:layout_height="fill_parent"
		    android:layout_marginTop="10dp">
		    <View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="0" />
		    <ListView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="fill_parent"
            android:layout_weight="8" />
		    <View
        		    android:layout_width="0dp"
        		    android:layout_height="0dp"
        		    android:layout_weight="0" />
		</LinearLayout>
</LinearLayout>